# beam_analysis

./: .gitignore  BeamAnalyzer.spec  README.md  build_exe.py  pyproject.toml
beam_analyzer/: main.py
beam_analyzer/core/: beam_statics.py  section_props.py  shear_stress.py  step_slicer.py
beam_analyzer/ui/: main_window.py  plot_widget.py  state.py  worker.py
beam_analyzer/ui/tabs/: tab_geometry.py  tab_results.py  tab_shear.py
