[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beam_analyzer"
version = "0.1.0"
description = "Beam cross-section analysis: STEP slicing, section properties, and CSV export."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "shapely>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "cadquery-ocp>=7.7",
    "PySide6>=6.6",
    "pyinstaller>=6.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[project.scripts]
beam-analyzer = "beam_analyzer.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
